debezium/dbz#1621 update reference adoc
Signed-off-by: chirag-brevo <chirag.goyal@brevo.com>

--- a/k8/debeziumservers.debezium.io-v1.yml
+++ b/k8/debeziumservers.debezium.io-v1.yml
@@ -1498,8 +1498,8 @@ spec:
                                 type: object
                             type: object
                           tolerations:
-                            description: Tolerations applied to the pod to allow
-                              scheduling on tainted nodes.
+                            description: Tolerations applied to the pod to allow scheduling
+                              on tainted nodes.
                             items:
                               properties:
                                 effect:
